# embed-tuning

./: .gitignore  README.md  model_tuning.py  neg_mining.ipynb  push_to_hub.ipynb  pyproject.toml  text_alignment.ipynb  update_tokenizer.py  utils.py
data/: README.md
