[tool.poetry]
name = "e5-finetuning"
version = "0.1.0"
description = ""
authors = ["Rustam Akimov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = {extras = ["torch"], version = "^4.44.2"}
ipykernel = "^6.29.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
sentence-transformers = {extras = ["train"], version = "^3.1.0"}
accelerate = "^0.34.2"
datasets = "^3.0.0"
tensorboard = "^2.17.1"
sacremoses = "^0.1.1"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
